# nextgen-mqtt-py

./: .gitignore  .gitmodules  CLAUDE.md  README.md  newsletter_llm_as_ui.md  newsletter_mcp_demo.md  pyproject.toml  requirements.txt  verbose_decode.py
docs/: helix-protobuf-decoding.md
examples/: README.md  auth_only.py  basic_subscribe.py  clear_retained.py  clear_retained2.py  direct_mqtt.py  mqtt_listen.py  multiple_commands.py  send_command.py  simple_oneliner.py  websocket_debug.py  websocket_send.py  ws_listen.py  ws_send_receive.py
scripts/: generate_proto.py
src/nextgen_mqtt/: __init__.py  auth.py  client.py  colors.py  config.py  helix.py  models.py
