[project]
name = "nextgen-mqtt"
version = "0.1.0"
description = "Python library for connecting to NextGen MQTT infrastructure via device-shard WebSocket"
readme = "README.md"
authors = [
    { name = "yasenhorozov", email = "128170592+yasenhorozov@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiomqtt>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
